// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`payout-details-core fetches payout details on connected callback 1`] = `
<payout-details-core class="body" style="display: block;">
  <style></style>
  <justifi-details>
    <div class="p-2" part="detail-head" slot="head-info">
      <div class="align-items-center d-flex flex-row gap-2 mb-2">
        <h1 class="m-0" part="detail-head-amount">
          $220.15 USD
        </h1>
        <span part="detail-head-badge" slot="badge">
          <span class="badge bg-success" title="Successfully deposited into your bank account">
            Paid
          </span>
        </span>
      </div>
      <div class="align-items-top d-flex flex-row" part="detail-head-info">
        <div class="border-1 border-end d-flex flex-column" part="detail-head-info-item">
          <span class="border-1 border-bottom fw-bold pe-2 ps-2" part="detail-head-info-item-title">
            Updated At
          </span>
          <span class="pe-2 ps-2 pt-2" part="detail-head-info-item-data">
            Dec 28, 2023 1:27am
          </span>
        </div>
        <div class="border-1 border-end d-flex flex-column" part="detail-head-info-item">
          <span class="border-1 border-bottom fw-bold pe-2 ps-2" part="detail-head-info-item-title">
            Created At
          </span>
          <span class="pe-2 ps-2 pt-2" part="detail-head-info-item-data">
            Dec 28, 2023 1:27am
          </span>
        </div>
        <div class="d-flex flex-column undefined" part="detail-head-info-item">
          <span class="border-1 border-bottom fw-bold pe-2 ps-2" part="detail-head-info-item-title">
            ID
          </span>
          <span class="pe-2 ps-2 pt-2" part="detail-head-info-item-data">
            po_17745yESnHyEgWNeunmhmR
          </span>
        </div>
        <div class="m-4">
          <button class="align-items-center btn btn-outline-secondary d-flex" part="button-secondary">
            Export CSV
          </button>
        </div>
      </div>
    </div>
    <div part="detail-section" slot="detail-sections">
      <h2 class="border-bottom fs-5 mt-4 pb-3" part="header-2">
        Details
      </h2>
      <div class="d-table gap-2 w-100">
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Date paid
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            Dec 28, 2023
          </span>
        </div>
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Statement Description
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            Payout
          </span>
        </div>
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Payout Method
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            standard
          </span>
        </div>
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Amount
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            $220.15
          </span>
        </div>
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Fee
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            $14.85
          </span>
        </div>
      </div>
      <h2 class="border-bottom fs-5 mt-4 pb-3" part="header-2">
        Account
      </h2>
      <div class="d-table gap-2 w-100">
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            ID
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            acc_5Et9iXrSSAZR2KSouQGAWi
          </span>
        </div>
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Account Type
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            checking
          </span>
        </div>
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Institution
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            checking
          </span>
        </div>
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Routing Number
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            110000000
          </span>
        </div>
        <div class="d-table-row gap-2" part="detail-section-item">
          <span class="d-table-cell fw-bold px-2" part="detail-section-item-title">
            Account Number
          </span>
          <span class="d-table-cell flex-1 px-2 text-wrap" part="detail-section-item-data">
            6789
          </span>
        </div>
      </div>
      <h2 class="border-bottom fs-5 mt-4 pb-3" part="header-2">
        Metadata
      </h2>
      <div class="d-table gap-2 w-100"></div>
    </div>
  </justifi-details>
</payout-details-core>
`;

exports[`payout-details-core handles fetch payout error correctly 1`] = `
<payout-details-core class="body" style="display: block;">
  <style></style>
  <main class="d-flex justify-content-center p-4 text-center" part="detail-empty-state" style="font-size: 1.2rem;">
    <div>
      Fetch error
    </div>
  </main>
</payout-details-core>
`;

exports[`payout-details-core renders loading state initially 1`] = `
<payout-details-core class="body" style="display: block;">
  <style></style>
  <main class="d-flex justify-content-center p-4 text-center" part="detail-loading-state" style="font-size: 1.2rem;">
    <div class="spinner-border spinner-border-sm" part="detail-loading-spinner" role="status">
      <span class="visually-hidden">
        Loading...
      </span>
    </div>
  </main>
</payout-details-core>
`;
